--- a/MVITO/MVITO/MVITO.csproj
+++ b/MVITO/MVITO/MVITO.csproj
@@ -12,7 +12,7 @@
     <DefaultLanguage>es-ES</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.17763.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.17134.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -123,19 +123,18 @@
     <Compile Include="Clases\Empleados.cs" />
     <Compile Include="Clases\Llenarcombo.cs" />
     <Compile Include="Clases\Validacion.cs" />
+    <Compile Include="Extensiones\AnimationExtensions.cs" />
+    <Compile Include="Extensiones\FrameworkElementExtensions.cs" />
+    <Compile Include="Extensiones\GridExtensions.cs" />
+    <Compile Include="Extensiones\MathExtensions.cs" />
+    <Compile Include="Extensiones\RelayCommand.cs" />
+    <Compile Include="Extensiones\SizeExtensions.cs" />
+    <Compile Include="Extensiones\WebViewExtensions.cs" />
+    <Compile Include="Extensiones\XamlExtensions.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\Page1.xaml.cs">
-      <DependentUpon>Page1.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Page2.xaml.cs">
-      <DependentUpon>Page2.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Page3.xaml.cs">
-      <DependentUpon>Page3.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\Page4.xaml.cs">
       <DependentUpon>Page4.xaml</DependentUpon>
     </Compile>
@@ -160,7 +159,9 @@
     <Content Include="Icons\monedas.png" />
     <Content Include="Icons\Pagos.png" />
     <Content Include="Icons\Perdidas.png" />
+    <Content Include="Icons\reloj.jpg" />
     <Content Include="Icons\Repartidor.png" />
+    <Content Include="Icons\reportes.jpg" />
     <Content Include="Icons\Reportes.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
@@ -180,21 +181,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Views\Page1.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Page2.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\Page3.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="Views\Page4.xaml">
-      <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Page5.xaml">
       <Generator>MSBuild:Compile</Generator>
